[gd_scene load_steps=6 format=3 uid="uid://3rbxtp41krd5"]

[ext_resource type="Script" path="res://flat-world/script/main.gd" id="1_rnq1w"]
[ext_resource type="Shader" path="res://flat-world/shader/ground.gdshader" id="3_ts5ev"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fug2n"]
render_priority = 0
shader = ExtResource("3_ts5ev")
shader_parameter/subdivisions = 32.0
shader_parameter/grid_width = 0.02
shader_parameter/background_color = Color(0.2, 0.2, 0.2, 1)
shader_parameter/background_color_two = Color(0.1, 0.1, 0.1, 1)
shader_parameter/grid_color = Color(0.5, 0.5, 0.5, 1)
shader_parameter/dashed_scale_x = 0.02
shader_parameter/dashed_scale_y = 0.02
shader_parameter/dashed_count_x = 1.0
shader_parameter/dashed_count_y = 1.0
shader_parameter/point_width = 0.021
shader_parameter/point_color = Color(0, 0, 0, 1)
shader_parameter/point_scale_x = 0.05
shader_parameter/point_scale_y = 0.05
shader_parameter/inside_width = 0.01
shader_parameter/inside_subdivisions = 6.0
shader_parameter/inside_color = Color(0.4, 0.4, 0.4, 1)
shader_parameter/in_dashed_scale_x = 0.3
shader_parameter/in_dashed_scale_y = 0.3
shader_parameter/in_dashed_count_x = 6.0
shader_parameter/in_dashed_count_y = 6.0

[sub_resource type="BoxMesh" id="BoxMesh_w4hnn"]
material = SubResource("ShaderMaterial_fug2n")
size = Vector3(400, 1, 400)

[sub_resource type="BoxShape3D" id="BoxShape3D_qomdh"]
size = Vector3(400, 1, 400)

[node name="Main" type="Node3D"]
script = ExtResource("1_rnq1w")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_w4hnn")
metadata/_edit_group_ = true

[node name="FloorC" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_qomdh")

[node name="Cam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 292.155, 267.179)

[node name="DLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.740183, 0.672406, 0, -0.672406, 0.740183, 0, 133.474, 113.373)

[node name="textbox" type="Label" parent="."]
offset_top = 8.0
offset_right = 1.0
offset_bottom = 31.0

[node name="valChange" type="LineEdit" parent="."]
offset_left = 1007.0
offset_top = 4.0
offset_right = 1148.0
offset_bottom = 45.0

[node name="Label" type="Label" parent="."]
offset_left = 878.0
offset_top = 11.0
offset_right = 995.0
offset_bottom = 34.0
text = "Floor Changer: "

[connection signal="text_submitted" from="valChange" to="." method="_on_val_change_text_submitted"]
